--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@
 
 /**/*exe
 /**/*obj
+
+#================================================
+# QMake
+#================================================
+
+/**/*user
+/**/Makefile*
+/**/moc_*
+/**/qrc_*
+/**/ui_*
+
+#================================================
+# Cygwin
+#================================================
+
+/**/*o
